separation of old and new project